--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -45,6 +45,7 @@
         <module>kafka-avro</module>
         <module>kafka-streams</module>
         <module>jpa</module>
+        <module>jpa-mapping-xml</module>
         <module>jpa-db2</module>
         <module>jpa-derby</module>
         <module>jpa-postgresql</module>
