--- a/bom/application/pom.xml
+++ b/bom/application/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>quarkus-parent</artifactId>
         <groupId>io.quarkus</groupId>
@@ -32,7 +32,8 @@
         <jaeger.version>1.4.0</jaeger.version>
         <quarkus-http.version>4.0.0.Alpha4</quarkus-http.version>
         <jboss-servlet-api_4.0_spec.version>1.0.0.Final</jboss-servlet-api_4.0_spec.version>
-        <micrometer.version>1.6.5</micrometer.version> <!-- when updating, verify if com.google.auth should not be updated too -->
+        <micrometer.version>1.6.5
+        </micrometer.version> <!-- when updating, verify if com.google.auth should not be updated too -->
         <google-auth.version>0.22.0</google-auth.version>
         <microprofile-config-api.version>2.0</microprofile-config-api.version>
         <microprofile-metrics-api.version>3.0</microprofile-metrics-api.version>
@@ -94,6 +95,8 @@
         <commons-codec.version>1.15</commons-codec.version>
         <classmate.version>1.5.1</classmate.version>
         <hibernate-orm.version>5.4.31.ormxml-SNAPSHOT</hibernate-orm.version>
+        <!-- Keep this aligned with the dependency version in Hibernate ORM/Envers -->
+        <dom4j.version>2.1.3</dom4j.version>
         <hibernate-reactive.version>1.0.0.CR1.Vertx4</hibernate-reactive.version>
         <hibernate-validator.version>6.2.0.Final</hibernate-validator.version>
         <hibernate-search.version>6.0.3.Final</hibernate-search.version>
@@ -774,12 +777,12 @@
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-liquibase</artifactId>
                 <version>${project.version}</version>
-             </dependency>
+            </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-liquibase-deployment</artifactId>
                 <version>${project.version}</version>
-             </dependency>
+            </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-hibernate-orm</artifactId>
@@ -1524,7 +1527,7 @@
                 </exclusions>
             </dependency>
             <dependency>
-            <groupId>io.quarkus</groupId>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-grpc-common</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -3452,7 +3455,7 @@
                 <version>${kafka2.version}</version>
                 <exclusions>
                     <exclusion>
-    	                <groupId>com.google.code.findbugs</groupId>
+                        <groupId>com.google.code.findbugs</groupId>
                         <artifactId>jsr305</artifactId>
                     </exclusion>
                 </exclusions>
@@ -4031,14 +4034,14 @@
                 <version>${wildfly-elytron.version}</version>
             </dependency>
             <dependency>
-              <groupId>org.wildfly.security</groupId>
-              <artifactId>wildfly-elytron-realm-jdbc</artifactId>
-              <version>${wildfly-elytron.version}</version>
+                <groupId>org.wildfly.security</groupId>
+                <artifactId>wildfly-elytron-realm-jdbc</artifactId>
+                <version>${wildfly-elytron.version}</version>
             </dependency>
             <dependency>
-              <groupId>org.wildfly.security</groupId>
-              <artifactId>wildfly-elytron-realm-ldap</artifactId>
-              <version>${wildfly-elytron.version}</version>
+                <groupId>org.wildfly.security</groupId>
+                <artifactId>wildfly-elytron-realm-ldap</artifactId>
+                <version>${wildfly-elytron.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.wildfly.security</groupId>
@@ -4155,16 +4158,39 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
                 <version>${hibernate-orm.version}</version>
+                <exclusions>
+                    <!-- We explicitly tell Hibernate ORM to use JAXB instead of dom4j
+                         through Quarkus-specific configuration, so we don't need dom4j. -->
+                    <exclusion>
+                        <groupId>org.dom4j</groupId>
+                        <artifactId>dom4j</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-graalvm</artifactId>
                 <version>${hibernate-orm.version}</version>
+                <exclusions>
+                    <!-- We explicitly tell Hibernate ORM to use JAXB instead of dom4j
+                         through Quarkus-specific configuration, so we don't need dom4j.
+                         Hopefully the exclusion won't be necessary someday: https://hibernate.atlassian.net/browse/HHH-13703
+                     -->
+                    <exclusion>
+                        <groupId>org.dom4j</groupId>
+                        <artifactId>dom4j</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-envers</artifactId>
                 <version>${hibernate-orm.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.dom4j</groupId>
+                <artifactId>dom4j</artifactId>
+                <version>${dom4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -4241,9 +4267,9 @@
                 <version>${derby-jdbc.version}</version>
             </dependency>
             <dependency>
-            	<groupId>com.ibm.db2</groupId>
-            	<artifactId>jcc</artifactId>
-            	<version>${db2-jdbc.version}</version>
+                <groupId>com.ibm.db2</groupId>
+                <artifactId>jcc</artifactId>
+                <version>${db2-jdbc.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.microsoft.sqlserver</groupId>
@@ -4379,10 +4405,10 @@
                 <artifactId>client</artifactId>
                 <version>${scram-client.version}</version>
             </dependency>
-           <dependency>
+            <dependency>
                 <groupId>io.smallrye.reactive</groupId>
                 <artifactId>smallrye-mutiny-vertx-mail-client</artifactId>
-               <version>${mutiny-vertx.version}</version>
+                <version>${mutiny-vertx.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.smallrye.reactive</groupId>
